--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div id="popupContainer">
         <div id="popup" >
             <button id="popupremove">x</button>
-            <label for="popupcontent">Enter the number of the subject you wish to edit</label>
+            <label for="popupcontent">Edit the following:</label>
             <div class="inputeditsubject">
-                <input type="number" name="editsubject" class="popupcontent">
-                <button class="add" id="existpopup">Enter</button>
+                <input type="text" name="editsubject" class="popupcontent">
+                <button class="add" id="exitpopup">Enter</button>
             </div>
         </div>
     </div>
