--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <label for="popupcontent">Edit the following:</label>
             <div class="inputeditsubject">
                 <input type="text" name="editsubject" class="popupcontent">
+                <input type="text" name="editscore" id="popscoreinput">
                 <button class="add" id="exitpopup">Enter</button>
             </div>
         </div>
